--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ django-js-asset==2.0.0
 django-mptt==0.14.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
+gunicorn==20.1.0
 Pillow==9.4.0
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 python-dotenv==1.0.0
 sqlparse==0.4.3
 tomli==2.0.1
+whitenoise==6.4.0
